# the-debuginator

./: .gitignore  README.md  the_debuginator.h  the_debuginator_queue.h
plugins/: LICENSE
plugins/stingray/the_debuginator_plugin/: CMakeLists.txt  c_api_the_debuginator.cpp  c_api_the_debuginator.h  copy_latest_debuginator_h.bat  resource.h  the_debuginator.h  the_debuginator_plugin.cpp  the_debuginator_plugin.rc.in
tests/: sk5.txt  the-debuginator.sln  the-debuginator_solution_suppressions.cfg
tests/sdl/: demo.cpp  demo.h  game.cpp  game.h  gui.cpp  gui.h  main.cpp  sdl.cpp  sdl.vcxproj  sdl.vcxproj.filters
tests/unittest/: unittest.c  unittest.cpp  unittest.vcxproj  unittest.vcxproj.filters
tests/zig-minimal/: build.bat
tests/zig-minimal/src/: build.zig
tests/zig/src/: c.zig  main.zig  the_debuginator_wrapper.c  the_debuginator_wrapper.h
tools/: stub_gen.py
